apps/keycloak/keycloak/networkpolicies/ingress-nginx-egress-keycloak.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-keycloak
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app: keycloak
            component: keycloak
            "k8s:io.kubernetes.pod.namespace": keycloak
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
