apps/keycloak/keycloak/networkpolicies/keycloak.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keycloak
  namespace: keycloak
spec:
  endpointSelector:
    matchLabels:
      app: keycloak
      component: keycloak
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: postgres
            namespace: keycloak
    - toFQDNs:
        - matchName: ${SMTP_DOMAIN}
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
