apps/keycloak/keycloak/networkpolicies/nginx-egress-keycloak.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-egress-keycloak
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
    - toServices:
        - k8sService:
            serviceName: keycloak
            namespace: keycloak
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
