apps/keycloak/keycloak/networkpolicies/traefik-egress-keycloak.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-keycloak
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik-traefik
      app.kubernetes.io/name: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            app: keycloak
            component: keycloak
            io.kubernetes.pod.namespace: keycloak
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
